--- a/page2.html
+++ b/page2.html
@@ -147,6 +147,17 @@
     .upgrade-button:hover {
       background-color: #003f7a;
     }
+
+    .cookie-click-effect {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      background-color: #3f8ed1;
+      opacity: 0; /* Make transparent */
+      transition: opacity 0.3s ease-in-out;
+      z-index: 5;
+    }
   </style>
 </head>
 <body>
@@ -279,7 +290,6 @@
 
     // Load the score from IndexedDB when the page loads
     window.onload = loadFromIndexedDB;
-
   </script>
 </body>
 </html>
