--- a/page2.html
+++ b/page2.html
@@ -46,7 +46,7 @@
       border-radius: 50%;
       position: relative;
       cursor: pointer;
-      transition: transform 0.1s ease-in-out;
+      transition: transform 0.1s ease-in-out, background-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out; /* Added transition */
       z-index: 10; /* Ensures cookie click area is above other elements */
       border: none; /* Remove the border around the circle */
     }
@@ -135,7 +135,7 @@
     }
 
     .upgrade-button {
-      padding: 10px 20px;
+      padding: 10px 20px; /* Restored button size and design */
       background-color: #00509E;
       color: white;
       border: none;
@@ -148,15 +148,19 @@
       background-color: #003f7a;
     }
 
-    .cookie-click-effect {
+    /* Transparent blue square around the cookie */
+    .click-circle::after {
+      content: '';
       position: absolute;
+      top: 0;
+      left: 0;
       width: 300px;
       height: 300px;
+      border: 3px solid transparent; /* Remove blue border */
       border-radius: 50%;
-      background-color: #3f8ed1;
-      opacity: 0; /* Make transparent */
-      transition: opacity 0s ease-in-out;
-      z-index: 5;
+      transition: border 0.3s ease-in-out;
+      pointer-events: none; /* Prevent interaction with the border */
+      z-index: 9;
     }
   </style>
 </head>
@@ -290,6 +294,7 @@
 
     // Load the score from IndexedDB when the page loads
     window.onload = loadFromIndexedDB;
+
   </script>
 </body>
 </html>
