--- a/page2.html
+++ b/page2.html
@@ -193,7 +193,7 @@
         <p>clicks</p>
         <p>plus one cookie per click</p>
       </div>
-      <button class="upgrade-button">10 🍪</button>
+      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
     </div>
   </div>
 
@@ -251,7 +251,7 @@
     }
 
     async function incrementScore() {
-      score++;
+      score += clickBonus + 1; // Add the bonus for each click
       document.getElementById('score').textContent = score;
       await updateScore(score);
 
@@ -280,6 +280,7 @@
     }
 
     let score = 0;
+    let clickBonus = 0; // Track the bonus clicks
     initialize();
   </script>
 </body>
