--- a/page2.html
+++ b/page2.html
@@ -198,7 +198,7 @@
         <p>clicks</p>
         <p>plus one cookie per click</p>
       </div>
-      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
+      <button class="upgrade-button" id="shopUpgradeButton">10 🍪</button>
     </div>
   </div>
 
@@ -297,8 +297,8 @@
     let clickBonus = 0; // Track the bonus clicks
     initialize();
 
-    // Add event listener to the upgrade button
-    document.getElementById('upgradeButton').addEventListener('click', applyUpgrade);
+    // Add event listener to the shop upgrade button
+    document.getElementById('shopUpgradeButton').addEventListener('click', applyUpgrade);
   </script>
 </body>
 </html>
