--- a/page2.html
+++ b/page2.html
@@ -182,9 +182,14 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+
+    <div class="upgrade-line">
+      <p>Upgrade clicks:</p>
+      <button class="upgrade-button" id="upgradeButton">10 🍪</button>
+    </div>
   </div>
 
-  <!-- GUIs -->
+  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
@@ -196,14 +201,20 @@
       <button class="upgrade-button" id="shopUpgradeButton">10 🍪</button>
     </div>
   </div>
+
+  <!-- Special GUI -->
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
     <p>Special events and items.</p>
   </div>
+
+  <!-- Stats GUI -->
   <div class="gui" id="statsGUI">
     <h2>Stats</h2>
     <p>Check your progress here.</p>
   </div>
+
+  <!-- Misc GUI -->
   <div class="gui" id="miscGUI">
     <h2>Misc</h2>
     <p>Extra settings and options.</p>
